<resources>
    <string name="app_name">TNA</string>
    <!-- Strings related to login -->
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="prompt_username">&#160;Username</string>
    <string name="prompt_email">&#160;Email</string>
    <string name="prompt_password">&#160;Password</string>
    <string name="action_sign_in">Sign</string>
    <string name="action_register">Don\'t have account? Sign up now</string>
    <string name="action_forgot_password">Forgot password?</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="navigation_item1">Home</string>
    <string name="navigation_item2">Alerts</string>
    <string name="navigation_item3">Reports</string>
    <string name="navigation_item4">Logout</string>
    <string name="login_title">Sign in</string>
    <string name="register_title">Sign Up</string>
    <string name="prompt_buyer">&#160;Buyer</string>
    <string name="navigation_title_aboutUs">About Us</string>
    <string name="action_login_back">Already registered? Login here</string>
    
    <!--Strings related to create Action -->
    <string name="actionTitle">Create Action</string>
    <string name="buyer">Buyer</string>
    <string name="styleNo">Style No.</string>
    <string name="orderRefNo">Order Ref No.</string>
    <string name="garmentName">Garment Name</string>
    <string name="leadDays">Lead Days</string>
    <string name="orderConfirmationDate">Order Confirmation Date (dd-mm-yyyy)</string>
    <string name="exFactoryDate">Ex-Factory Date (dd-mm-yyyy)</string>
    <string name="createAction">Submit</string>

    <!--Strings related to create Activity -->
    <string name="activityTitle">Create Activity</string>
    <string name="activity">Activity</string>
    <string name="lead_days">Lead Days</string>
    <string name="target_date">Target Date (dd-mm-yyyy)</string>
    <string name="createActivity">Submit</string>
</resources>
