<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/loginback"
    >

    <ImageView
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:id="@+id/developer_item_pic"
        android:background="@drawable/raymondslogo"
        android:layout_margin="@dimen/activity_horizontal_margin"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textSize="25sp"
            android:layout_margin="@dimen/activity_horizontal_margin"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_margin="@dimen/activity_horizontal_margin"
         >


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:drawableLeft="@drawable/ic_assignment_ind_black_24dp"
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:drawableStart="@drawable/ic_assignment_ind_black_24dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:drawableStart="@drawable/ic_https_black_24dp"
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:drawableLeft="@drawable/ic_https_black_24dp" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/buttonLogin"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:text="@string/action_sign_in_short"
                android:background="@drawable/button_background"
                android:textStyle="bold"
                android:textColor="@color/textWhite"
                />



            <!-- Link to Login Screen -->

            <TextView
                android:id="@+id/forgotpwd"
                android:textColor="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:text="@string/action_forgot_password"
                android:gravity="center_horizontal"
                android:linksClickable="true"/>

        </LinearLayout>

    <TextView
        android:id="@+id/btnLinkToRegisterScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/action_register"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center_horizontal"
        android:linksClickable="true"
        />
</LinearLayout>