<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/textWhite"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/activityTitle"
        app:titleTextColor="@color/textWhite"
        android:background="@color/colorPrimary" />


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            xmlns:app="http://schemas.android.com/apk/res-auto"

            android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    >

                    <EditText
                        android:id="@+id/activity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/activity"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"/>
                </android.support.design.widget.TextInputLayout>



            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/leaddays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:prompt="@string/leadDays"
                android:layout_margin="@dimen/activity_horizontal_margin"
                />putLayout>



                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    >

                    <EditText
                        android:id="@+id/targetDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/target_date"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"/>
                </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:elevation="6dp"
        app:backgroundTint="@color/button"
        app:pressedTranslationZ="12dp"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:src="@drawable/ic_done_black_24dp" />

    </android.support.design.widget.CoordinatorLayout>